# autogen_experiments

./: .gitignore  README.md  deep_research.ipynb  main.py  pyproject.toml  resources.yaml  start_opentelemetry_server.bat  token_counting.py  tools.py
basic_example/: README.md  main.ipynb
deep_research_example/: README.md  deep_research.ipynb
deep_research_example/examples/: fme_with_gpt5-mini.md  mcp.md  mcp_gpt-oss.md
examples/: fme_lung_with_tavily.md  fme_with_mock-false_research_and_web-fact-check.md  mcp.md  time_in_berlin.md
opencv_example/: .gitignore  README.md  main.py
tool_use_example/: README.md  main.py  math_server.py  tool_use_example.py
utilities/: README.md  __init__.py  token_counting.py
