[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext[http-tool,mcp,ollama,openai]>=0.7.4",
    "ipykernel>=6.30.1",
    "nest-asyncio>=1.6.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "mcp-remote>=0.1.0",
]
